# mlops

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  commands.py  pyproject.toml
DatasetLoader/: ImageLoader.py  LoadDataset.py
Training_and_Inference/: Inference.py  Train.py  utils.py
