[tool.poetry]
name = "mlops course"
version = "0.1.0"
description = "classifier for cats and dogs on image using Neural Networks"
authors = ["Sardor Lutfullaev <lutfullaevs03@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.1"
tqdm = "^4.66.2"
torchvision = "^0.17.1"
pillow = "^10.2.0"
scikit-learn = "1.4.1.post1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
